# delta-pack

./: README.md  codegen.ts  generator.ts  helpers.ts  package-lock.json  package.json  rle.ts  schema.json  template.hbs  tsconfig.json
.github/workflows/: ci.yml  cli-publish.yml  csharp-ci.yml  csharp-publish.yml  docs-landing.yml  publish.yml  rust-ci.yml  typescript-ci.yml  (+1 more)
benchmark/: .gitignore  README.md  benchmark.ts  build.ts  decodingSpeed.ts  encodingSize.ts  encodingSpeed.ts  package-lock.json  package.json  run.ts  tsconfig.json  utils.ts
cli/: README.md  package-lock.json  package.json  tsconfig.json
csharp/: .gitignore  DeltaPack.slnx  README.html  README.md  docfx.json  index.html  index.json  index.md  manifest.json  toc.html  toc.json  toc.yml  xrefmap.yml
docs/: index.html
example/: output.ts  output2.ts  output3.ts  output4.ts  output5.ts  output6.ts  schema.ts  schema2.ts  schema3.ts  schema4.ts  schema5.ts  usage.ts  usage2.ts  usage3.ts  usage4.ts  usage5.ts  usage5b.ts  usage5c.ts  usage6.ts  usage7.ts
examples/: generate-golden.sh
rust/: Cargo.toml  README.md
rust/benchmarks/: Cargo.toml  README.md  build.sh
rust/benchmarks/src/: generated.rs  main.rs
rust/scripts/: gen.sh
rust/src/: decoder.rs  encoder.rs  helpers.rs  lib.rs  rle.rs  varint.rs
rust/tests/: conformance.rs  json_interop.rs
typescript/: .gitignore  .npmignore  .prettierignore  .prettierrc  README.md  hierarchy.html  index.html  modules.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  typedoc.json  vitest.config.ts
(+259 files in other folders)
